# a_server

./: .gitignore  Cargo.toml  Dockerfile  README.md  abiri-6ba83-firebase-adminsdk-4j3qn-d305edf427.json  cert.pem  privkey.pem  rustfmt.toml  test.json
src/: db_client.rs  ecryption_engine.rs  encryption_engine.rs  file_server.rs  hello.html  image_server.rs  index.js  main.rs  review.rs  search.rs  users.rs
src/cars/: cars.rs  mod.rs  taxi.rs
src/dummy/: cars.json  image_req.json  mpesa_payment.json  token_payment.json
src/fcm_t/: fcm.rs  mod.rs  token.rs
src/location/: location.rs
src/payment_gateway/: merchant_portal.rs  mpesa_payment_gateway.rs  test.html
src/r/: mod.rs  r_tokens.rs
src/r_tokens/: r_tokens.rs
src/rental/: car.rs  client.rs  mod.rs  owner.rs
src/review/: mod.rs  review.rs
src/search/: search.rs
src/sql/: create.sql
src/tokens/: mod.rs  r_tokens.rs
src/users/: users.rs
src/verification/: car_verification.rs  mod.rs  user_verification.rs
