[package]
name = "house_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
hyper = "0.14.27"
image = "0.24.7"
serde_json = "1.0.105"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.4", features = ["cors"] }
