[package]
name = "house_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.6.20", features=["multipart"]}
hyper = "0.14.27"
image = "0.24.7"
serde_json = "1.0.105"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.4", features = ["cors"] }
base64 = "0.21.4"
chrono = "0.4.31"
reqwest = { version = "0.11.20", features = ["serde_json"] }
serde = { version = "1.0.188", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
postgres = "0.19.7"
tokio-postgres = "0.7.10"
