[package]
name = "house_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["multipart"] }
hyper = "1.5.0"
image = "0.25.1"
serde_json = "1.0.105"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = { version = "0.7.11", features = ["io"] }
tower-http = { version = "0.5.2", features = ["cors"] }
base64 = "0.22.1"
chrono = "0.4.38"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4"] }
anyhow = "1.0"
jsonwebtoken = "8.0"
log = "0.4"
env_logger = "0.10"

# DB
bytes = "*"
postgres = "0.19.7"
tokio-postgres = "0.7.10"
postgres-from-row = "0.5.2"

rand = "0.8.5"
levenshtein = "1.0.5"
fcm = "0.9.2"
firebase-rs = "2.1.2"
